--- a/econapp/templates/base.html
+++ b/econapp/templates/base.html
@@ -24,7 +24,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="/">Start Bootstrap</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -51,7 +51,7 @@
 
   <!-- Page Content -->
   <div class="container">
-
+    {% block content %}
     <div class="row">
 
       <div class="col-lg-3">
@@ -59,7 +59,7 @@
         <h1 class="my-4">Shop Name</h1>
         <div class="list-group">
         {% for category in categories %}
-          <a href="#" class="list-group-item">{{ category.name }}</a>
+          <a href="{{ category.get_absolute_url }}" class="list-group-item">{{ category.name }}</a>
         {% endfor %}
         </div>
 
@@ -103,7 +103,7 @@
               <a href="#"><img class="card-img-top" src="{{ product.image.url }}" alt="" style="width: 100%; height: 250px"></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">{{ product.title }}</a>
+                  <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
                 </h4>
                 <h5>{{ product.price }} руб.</h5>
                 <p class="card-text">{{ product.description }}</p>
@@ -120,7 +120,7 @@
 
     </div>
     <!-- /.row -->
-
+    {% endblock content %}
   </div>
   <!-- /.container -->
 
