--- a/econapp/templates/base.html
+++ b/econapp/templates/base.html
@@ -28,6 +28,25 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      {% if not request.get_full_path == '/' %}
+        <ul class="navbar-nav mr-auto">
+        
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Категории
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          
+            {% for category in categories %}
+              <a class="dropdown-item" href="{{ category.get_absolute_url }}">{{ category.name }}</a>
+            {% endfor %}          
+        </li>
+        
+        </ul>
+        {% endif %}
+      </div>
+
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
@@ -69,21 +88,20 @@
       <div class="col-lg-9">
 
         <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
+         
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-            </div>
+          {% for product in products %}
+            {% if forloop.first %}
+              <div class="carousel-item active">
+                <img class="d-block img-fluid" src="{{ product.image.url }}" alt="First slide" style="padding-left: 260px; height: 300px">
+              </div>
+            {% else %}
+              <div class="carousel-item">
+                  <img class="d-block img-fluid" src="{{ product.image.url }}" alt="Second slide" style="padding-left: 260px; height: 300px">
+              </div>
+            {% endif %}            
+          {% endfor %}
+                        
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
