--- a/econapp/templates/base.html
+++ b/econapp/templates/base.html
@@ -61,7 +61,7 @@
             <a class="nav-link" href="#">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="{% url 'cart' %}">Корзина <span class='badge'>{{ cart.items.count }}</span></a>
           </li>
         </ul>
       </div>
