--- a/econapp/templates/cart.html
+++ b/econapp/templates/cart.html
@@ -1,7 +1,46 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-
-
+<h3 class='text-center'>Ваша Корзина</h3>
+<br>
+<table class='table'>
+    <tr>
+        <td class='text-center'>Товар</td>
+        <td class='text-center'>Кол-во</td>
+        <td class='text-center'>Цена</td>
+        <td class='text-center'></td>
+    </tr>
+    {% for item in cart.items.all %}
+    <tr class='cart-item-{{ item.product.id }}'>
+        <td class='text-center'>{{ item.product.title }}</td>
+        <td class='text-center'>{{ item.qty }}</td>
+        <td class='text-center'>{{ item.item_total }}</td>
+        <td class='text-center'><a href='#' class='remove_from_cart' data-slug='{{ item.product.slug }}' data-id='{{ item.product.id }}'><button class='btn btn-default'>Удалить из корзины</button></a></td>
+    </tr>
+    {% endfor %}
+</table>
+<script src='{% static "js/jquery.js" %}'></script>
+<script>
+    $(document).ready(function(){
+        $('.remove_from_cart').on('click', function(e){
+            e.preventDefault()
+            product_slug = $(this).attr('data-slug')
+            item_product_id = $(this).attr('data-id')
+            data = {
+                product_slug: product_slug
+            }
+            $.ajax({
+                type: "GET",
+                url: '{% url 'remove_from_cart' %}',
+                data: data,
+                success: function(data){
+                    $("#cart_count").html(data.cart_total)
+                    $('.cart-item-' + item_product_id).css('display', 'none')
+                }
+            })
+        })
+    })    
+</script>
 
 {% endblock content %}
