--- a/econapp/templates/category.html
+++ b/econapp/templates/category.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="row">
@@ -15,13 +16,34 @@
                 <hr>
                 <h2>Цена: {{ product.price }} руб.</h2>
                 <a href="{{ product.get_absolute_url }}"><button class="btn btn-success">Подробней</button></a>
-                <a href="#"><button class="btn btn-danger">Добавить в корзину</button></a>
+                <a href="{% url 'add_to_cart'%}" class="add_to_cart" data-slug='{{ product.slug }}'><button class="btn btn-danger">Добавить в корзину</button></a>
             </div>
         </div>
         <br>
         {% endfor %}
     </div>
 </div>
+<script src='{% static "js/jquery.js" %}'></script>
+<script>
+    $(document).ready(function(){
+        $('.add_to_cart').on('click', function(e){
+            e.preventDefault()
+            product_slug = $(this).attr('data-slug')
+            data = {
+                product_slug: product_slug
+            }
+            $.ajax({
+                type: "GET",
+                url: '{% url 'add_to_cart' %}',
+                data: data,
+                success: function(data){
+                    $("#cart_count").html(data.cart_total)
+                }
+            })
+        })
+    })
+    
+</script>
 
 
 {% endblock content %}
