--- a/econapp/templates/cart.html
+++ b/econapp/templates/cart.html
@@ -14,11 +14,21 @@
     {% for item in cart.items.all %}
     <tr class='cart-item-{{ item.product.id }}'>
         <td class='text-center'>{{ item.product.title }}</td>
-        <td class='text-center'>{{ item.qty }}</td>
-        <td class='text-center'>{{ item.item_total }}</td>
+        <td class='text-center'>
+            <form action='' method='GET'>
+                <input type='number' name='qty' class='cart-item-qty' data-id='{{ item.id }}' value='{{ item.qty }}' min='1' style='width:50px;'>
+            </form>
+        </td>    
+        <td class='text-center' id='cart-item-total-{{ item.id }}'>{{ item.item_total }} руб.</td>
         <td class='text-center'><a href='#' class='remove_from_cart' data-slug='{{ item.product.slug }}' data-id='{{ item.product.id }}'><button class='btn btn-default'>Удалить из корзины</button></a></td>
     </tr>
     {% endfor %}
+    <tr>
+        <td></td>        
+        <td class='text-center'>Итого:</td>
+        <td class='text-center' id='cart_total_price'>{{ cart.cart_total }} руб. </td>
+        <td></td>
+    </tr>
 </table>
 <script src='{% static "js/jquery.js" %}'></script>
 <script>
@@ -40,7 +50,28 @@
                 }
             })
         })
-    })    
+    })  
+
+     $(document).ready(function(){
+        $('.cart-item-qty').on('click', function(){
+            qty = $(this).val()
+            item_id = $(this).attr('data-id')
+            data = {
+                qty: qty,
+                item_id: item_id
+            }
+            $.ajax({
+                type: "GET",
+                url: '{% url 'change_item_qty' %}',
+                data: data,
+                success: function(data){
+                    $('#cart-item-total-' + item_id).html(parseFloat(data.item_total).toFixed(2) + ' руб.')
+                    $('#cart_total_price').html(parseFloat(data.cart_total_price).toFixed(2) + ' руб.')
+                }
+
+            })
+        })
+    })  
 </script>
 
 {% endblock content %}
