--- a/econapp/templates/cart.html
+++ b/econapp/templates/cart.html
@@ -4,32 +4,37 @@
 {% block content %}
 <h3 class='text-center'>Ваша Корзина</h3>
 <br>
-<table class='table'>
-    <tr>
-        <td class='text-center'>Товар</td>
-        <td class='text-center'>Кол-во</td>
-        <td class='text-center'>Цена</td>
-        <td class='text-center'></td>
-    </tr>
-    {% for item in cart.items.all %}
-    <tr class='cart-item-{{ item.product.id }}'>
-        <td class='text-center'>{{ item.product.title }}</td>
-        <td class='text-center'>
-            <form action='' method='GET'>
-                <input type='number' name='qty' class='cart-item-qty' data-id='{{ item.id }}' value='{{ item.qty }}' min='1' style='width:50px;'>
-            </form>
-        </td>    
-        <td class='text-center' id='cart-item-total-{{ item.id }}'>{{ item.item_total }} руб.</td>
-        <td class='text-center'><a href='#' class='remove_from_cart' data-slug='{{ item.product.slug }}' data-id='{{ item.product.id }}'><button class='btn btn-default'>Удалить из корзины</button></a></td>
-    </tr>
-    {% endfor %}
-    <tr>
-        <td></td>        
-        <td class='text-center'>Итого:</td>
-        <td class='text-center' id='cart_total_price'>{{ cart.cart_total }} руб. </td>
-        <td></td>
-    </tr>
-</table>
+{% if cart.items.count > 0 %}
+<div class='my-cart'>
+    <table class='table'>
+        <tr>
+            <td class='text-center'>Товар</td>
+            <td class='text-center'>Кол-во</td>
+            <td class='text-center'>Цена</td>
+            <td class='text-center'></td>
+        </tr>
+        {% for item in cart.items.all %}
+        <tr class='cart-item-{{ item.product.id }}'>
+            <td class='text-center'>{{ item.product.title }}</td>
+            <td class='text-center'>
+                <form action='' method='GET'>
+                    <input type='number' name='qty' class='cart-item-qty' data-id='{{ item.id }}' value='{{ item.qty }}' min='1' style='width:50px;'>
+                </form>
+            </td>    
+            <td class='text-center' id='cart-item-total-{{ item.id }}'>{{ item.item_total }} руб.</td>
+            <td class='text-center'><a href='#' class='remove_from_cart' data-slug='{{ item.product.slug }}' data-id='{{ item.product.id }}'><button class='btn btn-default'>Удалить из корзины</button></a></td>
+        </tr>
+        {% endfor %}
+        <tr>
+            <td></td>        
+            <td class='text-center'>Итого:</td>
+            <td class='text-center' id='cart_total_price'>{{ cart.cart_total }} руб. </td>
+            <td></td>
+        </tr>
+    </table>
+</div>
+{% endif %}
+<h3 class='text-center'>Ваша корзина пуста</h3>
 <script src='{% static "js/jquery.js" %}'></script>
 <script>
     $(document).ready(function(){
@@ -47,6 +52,10 @@
                 success: function(data){
                     $("#cart_count").html(data.cart_total)
                     $('.cart-item-' + item_product_id).css('display', 'none')
+                    $('#cart_total_price').html(parseFloat(data.cart_total_price).toFixed(2) + ' руб.')
+                    $(parseInt(data.cart_total) == 0){
+                        $('.my-cart').css('display', 'none')
+                    }
                 }
             })
         })
