--- a/econapp/templates/cart.html
+++ b/econapp/templates/cart.html
@@ -32,9 +32,14 @@
             <td></td>
         </tr>
     </table>
+     <a href='{% url 'checkout' %}'><button class='btn btn-info float-right'>Предводительный заказ</button></a>
+    <br>
+    <br>
 </div>
+
 {% endif %}
-<h3 class='text-center'>Ваша корзина пуста</h3>
+<h3 class='cart-empty'></h3>
+
 <script src='{% static "js/jquery.js" %}'></script>
 <script>
     $(document).ready(function(){
@@ -53,8 +58,9 @@
                     $("#cart_count").html(data.cart_total)
                     $('.cart-item-' + item_product_id).css('display', 'none')
                     $('#cart_total_price').html(parseFloat(data.cart_total_price).toFixed(2) + ' руб.')
-                    $(parseInt(data.cart_total) == 0){
+                    if(parseInt(data.cart_total) == 0){
                         $('.my-cart').css('display', 'none')
+                        $('.cart-empty').html('<h3 class="text-center">Ваша корзина пуста</h3>')
                     }
                 }
             })
