--- a/econapp/templates/base.html
+++ b/econapp/templates/base.html
@@ -61,7 +61,10 @@
             <a class="nav-link" href="#">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'cart' %}">Корзина <span class='badge' id='cart_count'>{{ cart.items.count }}</span></a>
+            <a class="nav-link" href="{% url 'cart' %}">
+              Корзина 
+              <span class='badge' id='cart_count'>{% if not request.session.total %} 0 {% else %} {{ request.session.total }} {% endif %}</span>
+            </a>
           </li>
         </ul>
       </div>
