--- a/econapp/templates/cart.html
+++ b/econapp/templates/cart.html
@@ -36,7 +36,8 @@
     <br>
     <br>
 </div>
-
+{% else %}
+<h3 class="text-center">Ваша корзина пуста</h3>
 {% endif %}
 <h3 class='cart-empty'></h3>
 
